--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -5,7 +5,8 @@ on:
     branches: [ main ]
 
 jobs:
-  update:
+  dispatch:
+    permissions: write
     runs-on: ubuntu-latest
     steps:
     - name: Repository Dispatch
