--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   dispatch:
-    permissions: write
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
     - name: Repository Dispatch
